--- a/src/style/BarraBusqueda.css
+++ b/src/style/BarraBusqueda.css
@@ -1,7 +1,9 @@
+
 .search-container {
     display: flex;
     justify-content: center;
     margin-bottom: 20px;
+    gap: 10px;
 }
 
 .search-bar {
@@ -20,3 +22,18 @@
     border-color: #218838;
     background-color: #e6ffe6;
 }
+
+.search-category {
+    padding: 10px;
+    border: 2px solid #28a745;
+    border-radius: 25px;
+    outline: none;
+    font-size: 16px;
+    background-color: #f0fff4;
+    transition: 0.3s;
+}
+
+.search-category:focus {
+    border-color: #218838;
+    background-color: #e6ffe6;
+} 
