pequeño ajuste e el carrito

--- a/src/style/VistaProductos.css
+++ b/src/style/VistaProductos.css
@@ -1,4 +1,4 @@
-@import 'BarraBusqueda.css';
-@import 'Carrito.css';
-@import 'Productos.css';
-@import 'Titulo.css';
+@import "BarraBusqueda.css";
+@import "Carrito.css";
+@import "Productos.css";
+@import "Titulo.css";
